[package]
name = "sm-rand"
version = "0.1.0"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rand"
crate-type = ["staticlib"]

[dependencies]
rand = "0.8.4"

[build-dependencies]
cbindgen = "0.19"
